--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "intermediate-astro-v5-less-decap",
-  "type": "module",
-  "version": "2.1.1",
-  "scripts": {
-    "astro": "astro dev",
-    "decap": "npx decap-server",
-    "dev": "npm-run-all --parallel astro decap",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/sitemap": "^3.3.1",
-    "astro": "^5.7.12",
-    "astro-icon": "^1.1.1",
-    "autoprefixer": "^10.4.20",
-    "decap-server": "^3.1.2",
-    "less": "^4.2.0",
-    "typescript": "^5.6.3"
-  },
-  "devDependencies": {
-    "npm-run-all": "^4.1.5"
-  }
+	"name": "intermediate-astro-v5-less-decap",
+	"type": "module",
+	"version": "2.1.2",
+	"scripts": {
+		"astro": "astro dev",
+		"decap": "npx decap-server",
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview"
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/sitemap": "^3.3.1",
+		"astro": "^5.7.12",
+		"astro-icon": "^1.1.1",
+		"autoprefixer": "^10.4.20",
+		"less": "^4.2.0",
+		"typescript": "^5.6.3"
+	}
 }
