--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -34,7 +34,7 @@ collections:
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Cover Image", name: "image", widget: "image" }
       - { label: "Image Caption", name: "imageAlt", widget: "string" }
-      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
+      - { label: "Is it a featured post?", name: "isFeatured", widget: "boolean", default: false }
       - { label: "Body", name: "body", widget: "markdown" }
