--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+# .gitignore for Output Template
+
 # build output
 dist/
+
 # generated types
 .astro/
 
@@ -12,13 +15,23 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
+.env.local
 .env.production
 
-# macOS-specific files
+# operating system files
+*.lock
+*.out
+*.swp
+*.pem
+*.ppk
+.ds_store
 .DS_Store
-
-# jetbrains setting folder
+.AppleDouble
+.LSOverride
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 .idea/
