--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-	"name": "intermediate-astro-v5-less-decap",
+	"name": "output-template",
 	"type": "module",
-	"version": "2.2.4",
+	"version": "2.0.0",
 	"scripts": {
 		"astro": "astro dev",
-		"dev": "astro dev",
+		"decap": "npx decap-server",
+		"dev": "npm-run-all --parallel astro decap",
 		"start": "astro dev",
 		"build": "astro build",
-		"preview": "astro preview"
+		"preview": "astro preview",
+		"check": "astro check"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/sitemap": "^3.3.1",
-		"astro": "^5.7.12",
-		"astro-icon": "^1.1.1",
-		"autoprefixer": "^10.4.20",
+		"@astrojs/sitemap": "^3.4.2",
+		"astro": "^5.12.8",
+		"astro-icon": "^1.1.5",
+		"autoprefixer": "^10.4.21",
+		"decap-server": "^3.3.1",
 		"less": "^4.2.0",
-		"typescript": "^5.6.3"
+		"typescript": "^5.9.2"
+	},
+	"devDependencies": {
+		"npm-run-all": "^4.1.5"
 	}
 }
