--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "output-template",
 	"type": "module",
-	"version": "2.1.0",
+	"version": "2.2.0",
 	"scripts": {
 		"astro": "astro dev",
 		"decap": "npx decap-server",
@@ -14,11 +14,14 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/sitemap": "^3.4.2",
+		"@fontsource-variable/outfit": "^5.2.6",
+		"@tailwindcss/vite": "^4.1.11",
 		"astro": "^5.12.8",
 		"astro-icon": "^1.1.5",
 		"autoprefixer": "^10.4.21",
 		"decap-server": "^3.3.1",
 		"less": "^4.2.0",
+		"tailwindcss": "^4.1.11",
 		"typescript": "^5.9.2"
 	},
 	"devDependencies": {
